[gd_scene load_steps=6 format=2]

[ext_resource path="res://Helvetica-Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Assets/lemonade.png" type="Texture" id=2]
[ext_resource path="res://SCREEN.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 60
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 30
outline_color = Color( 1, 0.733333, 0.0196078, 1 )
font_data = ExtResource( 1 )

[node name="SCREEN" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -455.0
margin_top = -240.0
margin_right = 455.0
margin_bottom = 240.0
color = Color( 0.690196, 1, 0.533333, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="ColorRect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -455.0
margin_top = 47.0
margin_right = 455.0
margin_bottom = 108.0
custom_colors/font_color = Color( 1, 0.427451, 0.0117647, 1 )
custom_fonts/font = SubResource( 1 )
text = "YOU SERVED"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score2" type="Label" parent="ColorRect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -455.0
margin_top = 120.0
margin_right = 455.0
margin_bottom = 181.0
custom_colors/font_color = Color( 1, 0.427451, 0.0117647, 1 )
custom_fonts/font = SubResource( 1 )
text = "NUMBER"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score3" type="Label" parent="ColorRect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -455.0
margin_top = 189.0
margin_right = 455.0
margin_bottom = 250.0
custom_colors/font_color = Color( 1, 0.427451, 0.0117647, 1 )
custom_fonts/font = SubResource( 1 )
text = "LEMONADE"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score4" type="Label" parent="ColorRect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -455.0
margin_top = 265.0
margin_right = 455.0
margin_bottom = 326.0
custom_colors/font_color = Color( 1, 0.427451, 0.0117647, 1 )
custom_fonts/font = SubResource( 1 )
text = "! NEW HI-SCORE !"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Lemonade" type="Sprite" parent="ColorRect"]
position = Vector2( 129, 136 )
scale = Vector2( 10, 10 )
texture = ExtResource( 2 )

[node name="Lemonade2" type="Sprite" parent="ColorRect"]
position = Vector2( 789, 136 )
scale = Vector2( 10, 10 )
texture = ExtResource( 2 )

[node name="Button" type="Button" parent="ColorRect"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -214.0
margin_top = -128.0
margin_right = 214.0
margin_bottom = -30.0
custom_colors/font_color = Color( 1, 0.631373, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Play Again"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="ColorRect/Button" to="." method="_on_Button_pressed"]
